# suffixArray

./: .gitignore  CMakeLists.txt  Makefile  README.md  run-commands.sh
data/: HIVSequence.fa  Mississippi.fa
src/: main.cpp  suffixArray.cu  suffixArray.cuh
tbb_cmake_build/tbb_cmake_build_subdir_debug/: arena.d  backref.d  cache_aligned_allocator.d  concurrent_hash_map.d  concurrent_monitor.d  concurrent_queue.d  concurrent_queue_v2.d  concurrent_vector.d  concurrent_vector_v2.d  critical_section.d  itt_notify.d  large_objects.d  libtbb_preview_debug.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy_debug.so.2  mutex.d  queuing_rw_mutex.d  reader_writer_lock.d  recursive_mutex.d  semaphore.d  spin_rw_mutex_v2.d  tbb.def  tbb_main.d  tbb_misc.d  tbb_statistics.d  tbb_thread.d  tbbmalloc.def  tbbmallocproxy.def  tbbvars.csh  tbbvars.sh  version_string.ver
tbb_cmake_build/tbb_cmake_build_subdir_release/: backend.d  condition_variable.d  dynamic_link.d  frontend.d  governor.d  itt_notify_malloc.d  libtbb_preview.so.2  libtbbmalloc.so.2  libtbbmalloc_proxy.so.2  market.d  observer_proxy.d  pipeline.d  private_server.d  proxy.d  queuing_mutex.d  rml_tbb.d  scheduler.d  spin_mutex.d  spin_rw_mutex.d  task.d  task_group_context.d  task_v2.d  tbb.def  tbb_function_replacement.d  tbb_misc_ex.d  tbbmalloc.d  tbbmalloc.def  tbbmallocproxy.def  tbbvars.csh  tbbvars.sh  version_string.ver  x86_rtm_rw_mutex.d
